--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-midnight
+title: Welcome to the pavaniailuri's Home page
+description: Feel Free to bookmark this to keep an eye on my project updates
